# 2D

./: CMakeLists.txt
include/2d/: circle_renderer.hpp  line_renderer.hpp  rect_renderer.hpp
include/2d/common/: semaphore_ring.hpp  viewport_parameters.hpp
sources/: circle_renderer.cpp  line_renderer.cpp  rect_renderer.cpp
sources/common/: semaphore_ring.cpp
sources/shaders/: circle_renderer.frag.glsl  circle_renderer.vert.glsl  line_renderer.frag.glsl  line_renderer.vert.glsl  rect_renderer.frag.glsl  rect_renderer.vert.glsl
